--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -79,47 +79,62 @@ figure {
 }
 
 .bottom {
-  nav {
+  margin-top: 4rem;
+  margin-bottom: 1rem;
+
+  h5 {
+    font-size: 0.875rem;
+    font-weight: bold;
+    margin: 0.5rem 0;
+  }
+
+  .nav-wrapper {
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    margin: 2rem 0;
+    flex-direction: column;
+    align-items: center;
 
-    .book-btn {
-      font-size: .875rem;
-      color: $blue;
-      line-height: 2rem;
-      border: 1px solid $blue;
-      border-radius: 0.25rem;
-      cursor: pointer;
-      display: flex !important;
-      justify-content: center;
-      align-content: center;
-      align-items: center;
-      text-align: center;
-      padding: 1rem !important;
-      transition: .2s ease-in-out;
+    nav {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      margin-bottom: 2rem;
 
-      &:first-of-type {
-        margin: 0 1rem 0 0;
-      }
+      .book-btn {
+        font-size: .875rem;
+        color: $blue;
+        line-height: 2rem;
+        border: 1px solid $blue;
+        border-radius: 0.25rem;
+        cursor: pointer;
+        display: flex !important;
+        justify-content: center;
+        align-content: center;
+        align-items: center;
+        text-align: center;
+        padding: 1rem !important;
+        transition: .2s ease-in-out;
 
-      &:nth-child(2) {
-        margin: 0 1rem 0 0;
-      }
+        &:first-of-type {
+          margin: 0 1rem 0 0;
+        }
 
-      &:last-of-type {
-        margin: 0 0 0 0;
-      }
+        &:nth-child(2) {
+          margin: 0 1rem 0 0;
+        }
 
-      @media (max-width: 576px) {
-        line-height: 1.2rem !important;
-      }
+        &:last-of-type {
+          margin: 0 0 0 0;
+        }
 
-      &:hover {
-        color: $white;
-        background-color: rgba($blue, 0.5);
-        transform: scale(1.05);
+        @media (max-width: 576px) {
+          line-height: 1.2rem !important;
+        }
+
+        &:hover {
+          color: $white;
+          background-color: rgba($blue, 0.5);
+          transform: scale(1.05);
+        }
       }
     }
   }
@@ -128,12 +143,6 @@ figure {
     display: flex;
     flex-direction: column;
     align-items: center;
-
-    h5 {
-      font-size: 0.875rem;
-      font-weight: bold;
-      margin: 0.5rem 0;
-    }
 
     ul {
       padding-inline-start: initial;
