Fix reading time #7

--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -70,6 +70,7 @@ figure {
   align-items: center;
   flex-direction: row;
   flex-wrap: wrap;
+  margin-bottom: 2rem;
 
   .reading_time {
     font-style: italic;
