--- a/layouts/partials/docs/reading_time.html
+++ b/layouts/partials/docs/reading_time.html
@@ -1,8 +1,8 @@
 {{ $seconds := mul (div (countwords .Content) 100) 25 }}
 {{ $count := math.Round (div $seconds 60) }}
 
-{{ if gt $count 2 }}
+{{ if ge $count 2 }}
     {{ i18n "reading_time_plural" $count }}
 {{ else }}
-    {{ i18n "reading_time_singular" $count }}
+    {{ i18n "reading_time_singular" }}
 {{ end }}
