--- a/assets/_custom.scss
+++ b/assets/_custom.scss
@@ -66,16 +66,22 @@ figure {
 
 .top {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   flex-direction: row;
   flex-wrap: wrap;
   margin-bottom: 2rem;
 
+  .intro{
+    display: flex;
+    flex-direction: column;
+  }
+
   .reading_time {
     font-style: italic;
     font-size: 0.875rem;
     max-width: 40%;
+    text-align: center;
   }
 }
 
@@ -167,6 +173,63 @@ figure {
           }
         }
       }
+    }
+  }
+}
+
+.home_menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-bottom: 2rem;
+  flex-wrap: wrap;
+  align-items: stretch;
+
+  .book-btn {
+    font-weight: bold;
+    font-size: .875rem;
+    color: $blue;
+    line-height: 2rem;
+    border: 1px solid $blue;
+    border-radius: 0.25rem;
+    cursor: pointer;
+    display: flex !important;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    text-align: center;
+    padding: 1rem !important;
+    transition: .2s ease-in-out;
+
+    margin-top: 1rem;
+
+    &:first-of-type {
+      margin: 0 0 0 0;
+    }
+
+    @media (max-width: 576px) {
+      line-height: 1.2rem !important;
+    }
+
+    &:hover {
+      color: $white;
+      background-color: rgba($blue, 0.5);
+      transform: scale(1.05);
+    }
+  }
+}
+
+
+.book-header {
+  .book-brand{
+    a{
+      color: $black;
+    }
+  }
+  label {
+    img {
+      height: 32px;
+      width: auto;
     }
   }
 }
